--- a/helloApp/Base.lproj/Main.storyboard
+++ b/helloApp/Base.lproj/Main.storyboard
@@ -18,11 +18,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFa-uf-ENx">
-                                <rect key="frame" x="20" y="47" width="388" height="413"/>
+                                <rect key="frame" x="20" y="59.000000000000028" width="388" height="398.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gvj-3c-ZZj">
-                                <rect key="frame" x="20" y="480" width="388" height="412"/>
+                                <rect key="frame" x="20" y="481.66666666666674" width="388" height="422.33333333333326"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -30,12 +30,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Gvj-3c-ZZj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="JlO-Rh-RDy"/>
-                            <constraint firstItem="Gvj-3c-ZZj" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="O3u-bT-nKa"/>
+                            <constraint firstItem="Gvj-3c-ZZj" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="12" id="O3u-bT-nKa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gvj-3c-ZZj" secondAttribute="trailing" constant="20" id="aYQ-xQ-mlT"/>
                             <constraint firstItem="lFa-uf-ENx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gW6-k1-h7f"/>
-                            <constraint firstItem="Gvj-3c-ZZj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="10" id="hUG-ce-FgS"/>
-                            <constraint firstItem="lFa-uf-ENx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-10" id="hlG-zU-4es"/>
-                            <constraint firstItem="lFa-uf-ENx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jHJ-kb-bT7"/>
+                            <constraint firstItem="Gvj-3c-ZZj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="12" id="hUG-ce-FgS"/>
+                            <constraint firstItem="lFa-uf-ENx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-12" id="hlG-zU-4es"/>
+                            <constraint firstItem="lFa-uf-ENx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="jHJ-kb-bT7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lFa-uf-ENx" secondAttribute="trailing" constant="20" id="tvy-9n-F8g"/>
                         </constraints>
                     </view>
